--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 
 
   <dependencies>
+      <dependency>
+          <groupId>jfree</groupId>
+          <artifactId>jfreechart</artifactId>
+          <version>1.0.13</version>
+      </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
