--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,32 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.handlers</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.schemas</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>SymulationManager.ManagerApp</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ejb-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
@@ -111,6 +137,25 @@
           <version>1.2.17</version>
       </dependency>
 
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>14.0.1</version>
+      </dependency>
 
+      <dependency>
+          <groupId>pl.mobiid.server</groupId>
+          <artifactId>MobiApp-ejb</artifactId>
+          <version>0.0.3-SNAPSHOT</version>
+          <type>ejb-client</type>
+      </dependency>
+
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.ejb</artifactId>
+          <version>3.1.1</version>
+          <scope>system</scope>
+          <systemPath>${env.GLASSFISH_HOME}/modules/javax.ejb.jar</systemPath>
+      </dependency>
   </dependencies>
 </project>
